fixed: the ellipses on the day for mobile doesnt show unless you click on the day on desktop its hover, we should eliminate a click and just show the ellipses right away on mobile
Fixed: filter button dropdown on explore page is fixed on mobile

--- a/frontend/src/css/TripPage.css
+++ b/frontend/src/css/TripPage.css
@@ -497,7 +497,7 @@ html[data-theme="dark"] .react-datepicker__day--keyboard-selected {
     background: none;
     border: none;
     padding: 4px;
-    font-size: 18px;
+    font-size: 22px;
     color: var(--text-dark2);
     cursor: pointer;
     display: flex;
